--- a/templates/users/add-edit.html.twig
+++ b/templates/users/add-edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Add Discount item{% endblock %}
+{% block title %}User item{% endblock %}
 
 {% block body %}
     {{ form_start(form, {'attr': {'class':"your_class_name"}}) }}
@@ -10,17 +10,17 @@
         {#{{ form_label(form.address) }}
         {{ form_errors(form.name) }}#}
         <div>
-            {{ form_widget(form.email, {'attr': {'class': ''}}) }}
+            email: {{ form_widget(form.email, {'attr': {'class': ''}}) }}
         </div>
 
         {#{{ form_label(form.address) }}
         {{ form_errors(form.name) }}#}
         <div>
-            {{ form_widget(form.password, {'attr': {'class': ''}}) }}
+            password: {{ form_widget(form.password, {'attr': {'class': ''}}) }}
         </div>
 
         <div>
-            {{ form_widget(form.role, {'attr': {'class': ''}}) }}
+            role: {{ form_widget(form.role, {'attr': {'class': ''}}) }}
         </div>
 
         {#{{ form_rest(form) }}#}
