--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {% include 'layout/header-nav.html.twig'%}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
