--- a/templates/layout/header-nav.html.twig
+++ b/templates/layout/header-nav.html.twig
@@ -3,4 +3,5 @@
     <a href="{{ path('diagnostic') }}">Diagnostic</a> |
     <a href="{{ path('discounts') }}">Discounts</a> |
     <a href="{{ path('product_types') }}">Product Types</a>
+    <a href="{{ path('products') }}">Products</a>
 </nav>
