fix gulp configuration

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,6 +1,3 @@
-body
-  background-color: black
-
 p
   color: black
   background-color: red
@@ -9,9 +6,7 @@ p
 input
   min-width: 100px
 
-div
-  display: flex
-  justify-content: center
-  align-items: center
+table
+  width: 100%
 
 
