add reviews page

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,12 +1,6 @@
-p
-  color: black
-  background-color: red
-  padding: 10px
+.registration-link
+  font-size: 14px
+  text-decoration: none !important
 
-input
+.btn
   min-width: 100px
-
-table
-  width: 100%
-
-
