--- a/templates/discount/add-edit.html.twig
+++ b/templates/discount/add-edit.html.twig
@@ -27,5 +27,5 @@
 
     {{ form_end(form) }}
 
-    <a href="{{ path('discounts') }}">Back</a>
+    <a href="{{ path('discounts') }}">Cancel</a>
 {% endblock %}
