--- a/templates/product-types/add-edit.html.twig
+++ b/templates/product-types/add-edit.html.twig
@@ -23,5 +23,5 @@
 
     {{ form_end(form) }}
 
-    <a href="{{ path('product_types') }}">Back</a>
+    <a href="{{ path('product_types') }}">Cancel</a>
 {% endblock %}
