--- a/templates/product-types/index.html.twig
+++ b/templates/product-types/index.html.twig
@@ -10,12 +10,18 @@
 
     <div class="example-wrapper">
 
-        <a href="{{ path('product_type_add') }}">Add item</a>
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ path('product_type_add') }}">Add item</a>
+        {% endif %}
 
         {% for item in list  %}
             <h2>{{ item.name }}</h2>
-            <a href="{{ path('product_type_delete', {'productTypeId': item.id}) }}">Delete item</a>
-            <a href="{{ path('product_type_edit', {'productTypeId': item.id}) }}">Edit item</a>
+
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('product_type_delete', {'productTypeId': item.id}) }}">Delete item</a>
+                <a href="{{ path('product_type_edit', {'productTypeId': item.id}) }}">Edit item</a>
+            {% endif %}
+
         {% endfor %}
     </div>
 {% endblock %}
