--- a/templates/products/add-edit.html.twig
+++ b/templates/products/add-edit.html.twig
@@ -47,5 +47,5 @@
 
     {{ form_end(form) }}
 
-    <a href="{{ path('products') }}">Back</a>
+    <a href="{{ path('products') }}">Cancel</a>
 {% endblock %}
