--- a/templates/layout/header-nav.html.twig
+++ b/templates/layout/header-nav.html.twig
@@ -1,11 +1,37 @@
-<nav>
-    <a href="{{ path('diagnostic') }}">Diagnostic</a> |
-    <a href="{{ path('discounts') }}">Discounts</a> |
-    <a href="{{ path('product_types') }}">Product Types</a> |
-    <a href="{{ path('products') }}">Products</a>
-</nav>
+{% if is_granted('ROLE_ADMIN') %}
 
-<div class="logout-link">
-    <a href="{{ path('logout') }}">Logout</a> |
-    <a href="{{ path('registration')}}">Registration</a>
-</div>
+    <nav>
+        <a href="{{ path('diagnostic') }}">   Diagnostic    </a> |
+        <a href="{{ path('discounts') }}">    Discounts     </a> |
+        <a href="{{ path('product_types') }}"> Product Types </a> |
+        <a href="{{ path('products') }}">     Products      </a> |
+        <a href="{{ path('reviews') }}">       Reviews       </a>
+    </nav>
+
+{% else %}
+
+    <nav>
+        <a href="{{ path('index') }}">           Home       </a> |
+        <a href="{{ path('about') }}">       About us   </a> |
+        <a href="{{ path('diagnostic') }}"> Diagnostic </a> |
+        <a href="{{ path('discounts') }}">  Discounts  </a> |
+        <a href="{{ path('products') }}">    Products   </a> |
+        <a href="{{ path('reviews') }}">     Reviews    </a>
+    </nav>
+
+{% endif %}
+
+{% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('ROLE_ADMIN') %}
+    <div class="logout-link">
+        <a href="{{ path('logout') }}">Logout</a>
+    </div>
+{% else %}
+    <div class="logout-link">
+        <a href="{{ path('login') }}">Login</a>
+        <a href="{{ path('registration') }}">Registration</a>
+    </div>
+{% endif %}
+
+
+
+
