--- a/templates/reviews/index.html.twig
+++ b/templates/reviews/index.html.twig
@@ -10,17 +10,18 @@
 
     <div class="example-wrapper">
 
-        {% if is_granted('ROLE_ADMIN') %}
-            <a href="{{ path('discount_add') }}">Add item</a>
+        {% if is_granted('ROLE_ADMIN') or is_granted('IS_AUTHENTICATED_FULLY') %}
+            <a href="{{ path('review_add') }}">Add item</a>
+        {% else %}
+            <button>Add item</button>
         {% endif %}
 
         {% for item in list  %}
-            <h2>{{ item.name }}</h2>
-            <p>percentage: <span>{{ item.percentage }}</span></p>
+            <h2>{{ item.description }}</h2>
 
             {% if is_granted('ROLE_ADMIN') %}
-                <a href="{{ path('discount_delete', {'discountId': item.id}) }}">Delete item</a>
-                <a href="{{ path('discount_edit', {'discountId': item.id}) }}">Edit item</a>
+                <a href="{{ path('review_delete', {'reviewId': item.id}) }}">Delete item</a>
+                <a href="{{ path('review_edit', {'reviewId': item.id}) }}">Edit item</a>
             {% endif %}
 
         {% endfor %}
