--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,30 +1,38 @@
 {% extends 'base.html.twig' %}
 {% block title %}Login{% endblock %}
+{% block stylesheets %}<link rel="stylesheet" href="{{ asset('css/login.min.css') }}">{% endblock %}
 {% block body %}
-    <form method="post" class="form-signin login-form" novalidate="novalidate">
-        <h1 class="h3 font-weight-normal head-title login-head ">Login</h1>
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey }}</div>
-        {% endif %}
-        <div class="form-group">
-            <label for="inputEmail" class="sr-only">Email</label>
-            <span>Username</span>
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="your email" required autofocus>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword" class="sr-only">Password</label>
-            <span>Password</span>
-            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="your password" required>
-        </div>
-        <div class="row flex-content mb-15">
-            <div class="col-sm-6">
-                <button class="btn login_btn color-btn" type="submit">Login</button>
+    <div class="login-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <form method="post" class="login-form">
+                        <div class="login-header d-flex justify-content-between mb-3">
+                            <h1>Login</h1>
+                            <a class="registration-link" href="{{ path('registration') }}">
+                                <i class="icon-pencil"></i>
+                                <span>Registration</span>
+                            </a>
+                        </div>
+                        {% if error %}
+                            <div class="alert alert-danger">{{ error.messageKey }}</div>
+                        {% endif %}
+                        <div class="form-group">
+                            <label for="inputEmail">Email</label>
+                            <input type="email" name="email" class="form-control" placeholder="your email" required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword">Password</label>
+                            <input type="password" name="password" class="form-control" placeholder="your password" required>
+                        </div>
+                        <div class="d-flex mb-15">
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-light ml-3" href="{{ path('index') }}">Cancel</a>
+                        </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    </form>
+                </div>
             </div>
-            {#<div class="col-sm-6 ling_up">
-                <a class="card-link" href="{{ path('app_user_registration') }}">{{ 'login.sign_up' | trans }}</a>
-                <a class="card-link" href="{{ path('app_password_reset') }}">{{ 'login.forgot_password' | trans }}</a>
-            </div>#}
         </div>
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-    </form>
+    </div>
 {% endblock %}
